--- a/main.css
+++ b/main.css
@@ -9,34 +9,70 @@
     color: #444;
     text-align: center;
     line-height: 1.5;
+    letter-spacing: 1.3;
+  }
+/****contains header and nav******/
+  #nav-wrapper {
+    border: 1px solid blue;
+  }
+/*name and title: banner*/
+  header {
+    padding: 0.6rem;
+  }
+
+  /*name and title wrapper*/
+  #name-and-title{
+    border: 1px solid purple;
+  }
+/*nav links*/
+  span{
+    padding: 0 5px;
+  }
+/*main content wrapper aboubt me and projects*/
+  #main-wrapper{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: minmax(400px,auto);
+  }
+/*sections about me and projects*/
+  .box-1,.box-2,.box-3,.box-4{
+    margin: 1rem;
+    border: 1px solid red;
+    padding: 0.5rem;
+    background-color: #bbb;
+  }
+  
+
+  .project-img1{
+    background-image: url('./imgs/bookmark.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-width: 250px;
+    min-height: 250px;
+    margin: auto;
+  }
+  .project-img2{
+    background-image: url('./imgs/quiz.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-width: 250px;
+    min-height: 250px;
+    margin: auto;
+  }
+
+  .project-img,.project-description{
+    border: 1px solid black;
+  }
+
+  .about-me,.about-me-para{
+    margin: 0;
+    padding: 0.5rem;
   }
   
   nav,
   footer {
-    padding: 1% 0;
-    background-color: #aaa;
+    width: 100%;
+    padding: 1rem;
+    border: 1px solid green;
   }
   
-  nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 10;
-  }
-  
-  
-  
-  header {
-    padding: 12% 0;
-  }
-  
-  section {
-    min-height: 200px;
-    padding: 6% 0;
-    background-color: #bbb;
-  }
-  
-  section:nth-child(even) {
-    background-color: #ddd;
-  }
