--- a/main.css
+++ b/main.css
@@ -42,25 +42,15 @@
     background-color: #bbb;
   }
   
-
-  .project-img1{
-    background-image: url('./imgs/bookmark.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    min-width: 250px;
-    min-height: 250px;
-    margin: auto;
-  }
-  .project-img2{
-    background-image: url('./imgs/quiz.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    min-width: 250px;
-    min-height: 250px;
-    margin: auto;
+  img{
+    display: block;
+    width: 100%;
+    height: auto;
+    object-fit: contain;
   }
 
-  .project-img,.project-description{
+
+  .project-img1,.project-img2,.project-description{
     border: 1px solid black;
   }
 
