--- a/main.css
+++ b/main.css
@@ -3,6 +3,8 @@
   }
   
   body {
+    width: 80%;
+    margin: auto;
     font-family: "Open Sans",
     sans-serif; 
     font-size: 20px;
@@ -10,25 +12,52 @@
     text-align: center;
     line-height: 1.5;
     letter-spacing: 1.3;
+    background: whitesmoke;
   }
 /****contains header and nav******/
-  #nav-wrapper {
-    border: 1px solid blue;
-  }
+  
+/*background image for nav wrapper*/
+/*havent added pic yet still working it*/
+.background-image{
+  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: auto;
+    background: url("./imgs/yeah.png");
+    background-repeat: no-repeat;
+    background-size: 25%;
+    background-position: left;
+    position: relative;
+}
+.background-image::after{
+    color: rgba(208, 208, 208, 0.721);
+     width: 100%;
+     height: 100%;
+     position: absolute;
+     content: '';
+     top: 0;
+     left:0;
+     background: rgba(249, 249, 249, 0);
+    z-index: 1;
+}
+/*bring header and nav to top of image*/
+header,nav{
+  position: relative;
+  border-bottom: 2px solid black;
+  z-index: 2;
+}
+
 /*name and title: banner*/
   header {
     padding: 0.6rem;
-  }
-
-  /*name and title wrapper*/
-  #name-and-title{
-    border: 1px solid purple;
   }
 /*nav links*/
   span{
     padding: 0 5px;
   }
 /*main content wrapper aboubt me and projects*/
+
   #main-wrapper{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -37,7 +66,7 @@
 /*sections about me and projects*/
   .box-1,.box-2,.box-3,.box-4{
     margin: 1rem;
-    border: 1px solid red;
+    
     padding: 0.5rem;
     background-color: #bbb;
   }
@@ -83,8 +112,7 @@
 }
 
 
-  nav,
-  footer {
+footer {
     width: 100%;
     padding: 1rem;
     border: 1px solid green;
