--- a/main.css
+++ b/main.css
@@ -8,45 +8,61 @@
     font-family: "Open Sans",
     sans-serif; 
     font-size: 20px;
-    color: #444;
     text-align: center;
     line-height: 1.5;
     letter-spacing: 1.3;
     background: whitesmoke;
   }
-/****contains header and nav******/
+/*all links*/
+a{
+text-decoration: none;
+color: whitesmoke
+}
+a:hover{
+  color: black;
+}
+
+  header,nav{
+    background: rgba(76,76,76,1);
+background: -moz-linear-gradient(-45deg, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 12%, rgba(102,102,102,1) 25%, rgba(71,71,71,1) 39%, rgba(44,44,44,1) 50%, rgba(0,0,0,1) 51%, rgba(17,17,17,1) 60%, rgba(43,43,43,1) 76%, rgba(28,28,28,1) 91%, rgba(19,19,19,1) 100%);
+background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(76,76,76,1)), color-stop(12%, rgba(89,89,89,1)), color-stop(25%, rgba(102,102,102,1)), color-stop(39%, rgba(71,71,71,1)), color-stop(50%, rgba(44,44,44,1)), color-stop(51%, rgba(0,0,0,1)), color-stop(60%, rgba(17,17,17,1)), color-stop(76%, rgba(43,43,43,1)), color-stop(91%, rgba(28,28,28,1)), color-stop(100%, rgba(19,19,19,1)));
+background: -webkit-linear-gradient(-45deg, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 12%, rgba(102,102,102,1) 25%, rgba(71,71,71,1) 39%, rgba(44,44,44,1) 50%, rgba(0,0,0,1) 51%, rgba(17,17,17,1) 60%, rgba(43,43,43,1) 76%, rgba(28,28,28,1) 91%, rgba(19,19,19,1) 100%);
+background: -o-linear-gradient(-45deg, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 12%, rgba(102,102,102,1) 25%, rgba(71,71,71,1) 39%, rgba(44,44,44,1) 50%, rgba(0,0,0,1) 51%, rgba(17,17,17,1) 60%, rgba(43,43,43,1) 76%, rgba(28,28,28,1) 91%, rgba(19,19,19,1) 100%);
+background: -ms-linear-gradient(-45deg, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 12%, rgba(102,102,102,1) 25%, rgba(71,71,71,1) 39%, rgba(44,44,44,1) 50%, rgba(0,0,0,1) 51%, rgba(17,17,17,1) 60%, rgba(43,43,43,1) 76%, rgba(28,28,28,1) 91%, rgba(19,19,19,1) 100%);
+background: linear-gradient(135deg, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 12%, rgba(102,102,102,1) 25%, rgba(71,71,71,1) 39%, rgba(44,44,44,1) 50%, rgba(0,0,0,1) 51%, rgba(17,17,17,1) 60%, rgba(43,43,43,1) 76%, rgba(28,28,28,1) 91%, rgba(19,19,19,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#131313', GradientType=1 );
+    color: #f2f2f2;
+    border-bottom: 2px solid whitesmoke;
+
+
+  }
+
+  .name-and-title h2 {
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid orange; /* The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .15em; /* Adjust as needed */
+    animation: 
+      typing 4s steps(60, end),
+      blink-caret .75s step-end infinite;
+  }
+  .type-box{
+    width: 500px;
+    margin: auto;
+  }
   
-/*background image for nav wrapper*/
-/*havent added pic yet still working it*/
-.background-image{
-  box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: auto;
-    background: url("./imgs/yeah.png");
-    background-repeat: no-repeat;
-    background-size: 25%;
-    background-position: left;
-    position: relative;
-}
-.background-image::after{
-    color: rgba(208, 208, 208, 0.721);
-     width: 100%;
-     height: 100%;
-     position: absolute;
-     content: '';
-     top: 0;
-     left:0;
-     background: rgba(249, 249, 249, 0);
-    z-index: 1;
-}
-/*bring header and nav to top of image*/
-header,nav{
-  position: relative;
-  border-bottom: 2px solid black;
-  z-index: 2;
-}
+  /* The typing effect */
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+  
+  /* The typewriter cursor effect */
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: orange; }
+  }
 
 /*name and title: banner*/
   header {
@@ -56,19 +72,47 @@ header,nav{
   span{
     padding: 0 5px;
   }
+
+  
+/*havent added pic yet still working it*/
+.background-image{
+  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: auto;
+    background: url("./imgs/coding.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+.background-image::after{
+    color: rgba(85, 85, 85, 0.33);
+     width: 100%;
+     height: 100%;
+     position: absolute;
+     content: '';
+     top: 0;
+     left:0;
+     background: rgba(249, 249, 249, 0.372);
+    z-index: 1;
+}
 /*main content wrapper aboubt me and projects*/
 
   #main-wrapper{
+    position: relative;
+    z-index: 2;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-auto-rows: minmax(400px,auto);
   }
 /*sections about me and projects*/
   .box-1,.box-2,.box-3,.box-4{
+    color: #f2f2f2;
     margin: 1rem;
-    
     padding: 0.5rem;
-    background-color: #bbb;
+    background-color: #000000ac;
   }
   /*all images*/
   img{
