--- a/main.css
+++ b/main.css
@@ -117,6 +117,15 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', end
     padding: 0.5rem;
     background-color: #000000ac;
   }
+  /*TITLE DESCRIP STACK AND LINKS COLOR */
+  .tdsl{
+    color: rgb(255, 135, 79);
+background: #666666;
+-webkit-background-clip: text;
+-moz-background-clip: text;
+background-clip: text;
+text-shadow: 0px 2px 2px rgba(255,255,255,0.5);
+  }
   /*all images*/
   img{
     display: block;
@@ -159,7 +168,7 @@ footer {
     border: 1px solid green;
   }
   
-
+/************MEDIA QUERIES******************/
   @media (max-width: 1220px){
     #main-wrapper{
       display: grid;
@@ -167,8 +176,34 @@ footer {
     }
   }
 
-  @media (max-width: 768){
-h1, h2{
-  font-size: 1rem;
+  @media (max-width: 768px){
+h1,h2{
+  font-size: 24px;
+}
+h3{
+  font-size: 24px;
+}
+.tech-imgs{
+  width: 120px;
+  height: 120px;
+}
+  }
+
+  @media (max-width: 650px){
+    .type-text{
+      font-size: 16px;
+      width: 300px
     }
+    .type-box{
+      text-align: center;
+      width: 300px;
+    }
+    .tech-imgs{
+      width: 100px;
+      height: 100px;
+    }
+    .tect-text{
+      font-size: 1.3rem;
+    }
+
   }
