--- a/project.css
+++ b/project.css
@@ -14,22 +14,91 @@
     background: whitesmoke;
   }
 
+  header,nav{
+    width:100%;
+    color: #f2f2f2;
+    border-bottom: 2px solid whitesmoke;
+  }
+/*links*/
   a{
+    padding: 0.5rem;
     text-decoration: none;
-    color: rgb(255, 127, 88)
+    color: whitesmoke;
     }
     a:hover{
       color: black;
     }
-
-    .project-wrapper{
-      width:100%;
-      /* position: relative;
-      z-index: 2; */
-      display: grid;
-      grid-template-columns: 1fr 1fr;
+/*office image*/
+    .nav-wrapper{
+      box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: auto;
+        background: url("./imgs/office.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        position: relative;
+    }
+    .nav-wrapper::after{
+        color: rgba(85, 85, 85, 0.33);
+         width: 100%;
+         height: 100%;
+         position: absolute;
+         content: '';
+         top: 0;
+         left:0;
+         background: rgba(84, 84, 84, 0.372);
+         z-index: 1;
     }
 
+    .img-wrapper{
+      position: relative;
+      z-index: 2;
+    }
+/*main content img*/
+    .background-image{
+      box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: auto;
+        background: url("./imgs/coding.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        position: relative;
+    }
+    .background-image::after{
+        color: rgba(85, 85, 85, 0.33);
+         width: 100%;
+         height: 100%;
+         position: absolute;
+         content: '';
+         top: 0;
+         left:0;
+         background: rgba(249, 249, 249, 0.372);
+         z-index: 1;
+    }
+/*intro pic*/
+    .intro{
+      width: 300px;
+      height: auto;
+      margin: auto;
+      position: relative;
+      z-index: 2;
+    }
+/*display grid container*/
+    .project-wrapper{
+      width:100%;
+      position: relative;
+      z-index: 2;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-auto-rows: minmax(400px,auto);
+    }
+/*project boxes*/
   .box-2,.box-3{
       color: #f2f2f2;
       margin: 1rem;
@@ -37,9 +106,20 @@
       background-color: #000000ac;
     }
 
+/*need to change image size as it breaks screen*/
+    .project-img1,.project-img2{
+      min-width: 200px;
+      height: auto;
+      margin: auto;
+    }
+/*all project imgs*/
     img{
       display: block;
       width: 100%;
       height: auto;
       object-fit: contain;
+    }
+
+    footer{
+      border-top: 2px solid black;
     }
