--- a/main.css
+++ b/main.css
@@ -179,7 +179,7 @@ text-shadow: 0px 2px 2px rgba(255,255,255,0.5);
 footer {
     width: 100%;
     padding: 1rem;
-    border: 1px solid green;
+   border-top: 2px solid black;
   }
   
 /************MEDIA QUERIES******************/
