--- a/project.css
+++ b/project.css
@@ -120,6 +120,49 @@
       object-fit: contain;
     }
 
+    /*title descrip stack links*/
+      .tdsl{
+        color: rgb(255, 135, 79);
+    background: #666666;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    text-shadow: 0px 2px 2px rgba(255,255,255,0.5);
+      }
+
+
     footer{
       border-top: 2px solid black;
     }
+
+    @media (max-width: 920px){
+      .project-wrapper{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-auto-rows: minmax(400px,auto);
+      }
+    }
+
+@media (max-width: 768px){
+  h1,h2{
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 375px){
+a{
+  font-size: 1rem;
+}
+
+  h1,h2{
+    font-size: 1rem;
+  }
+
+.intro{
+  display: none;
+}
+
+p{
+  font-size: 12px;
+}
+}
