--- a/contact.css
+++ b/contact.css
@@ -1,57 +1,70 @@
 * {
     box-sizing: border-box;
-  }
-  
-  body {
+}
+
+body {
     width: 80%;
     margin: auto;
     font-family: "Open Sans",
-    sans-serif; 
+        sans-serif;
     font-size: 20px;
     text-align: center;
     line-height: 1.5;
     letter-spacing: 1.3;
     background: whitesmoke;
-  }
+}
 
-  header,nav{
-    width:100%;
+header,
+nav {
+    width: 100%;
     color: #f2f2f2;
     border-bottom: 2px solid whitesmoke;
-  }
+}
+
 /*links*/
-  a{
+a {
     padding: 0.5rem;
     text-decoration: none;
     color: whitesmoke;
-    }
-    a:hover{
-      color: black;
-    }
-    .nav-wrapper{
-        box-sizing: border-box;
-          margin: 0;
-          padding: 0;
-          width: 100%;
-          height: auto;
-          background: url("./imgs/office.png");
-          background-repeat: no-repeat;
-          background-size: cover;
-          background-position: center;
-          position: relative;
-      }
-      .nav-wrapper::after{
-          color: rgba(85, 85, 85, 0.33);
-           width: 100%;
-           height: 100%;
-           position: absolute;
-           content: '';
-           top: 0;
-           left:0;
-           background: rgba(84, 84, 84, 0.372);
-           z-index: 1;
-      }
-      .img-wrapper{
-        position: relative;
-        z-index: 2;
-      }
+}
+
+a:hover {
+    color: black;
+}
+
+.nav-wrapper {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: auto;
+    background: url("./imgs/office.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+
+.nav-wrapper::after {
+    color: rgba(85, 85, 85, 0.33);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    background: rgba(84, 84, 84, 0.372);
+    z-index: 1;
+}
+
+.img-wrapper {
+    position: relative;
+    z-index: 2;
+}
+
+.contact-wrapper{
+    width: 100%;
+    height: 400px;
+    background: rgba(84, 84, 84, 0.372);
+    
+}
