--- a/project.css
+++ b/project.css
@@ -1,168 +1,184 @@
 * {
-    box-sizing: border-box;
-  }
-  
-  body {
-    width: 80%;
-    margin: auto;
-    font-family: "Open Sans",
-    sans-serif; 
-    font-size: 20px;
-    text-align: center;
-    line-height: 1.5;
-    letter-spacing: 1.3;
-    background: whitesmoke;
-  }
+  box-sizing: border-box;
+}
 
-  header,nav{
-    width:100%;
-    color: #f2f2f2;
-    border-bottom: 2px solid whitesmoke;
-  }
+body {
+  width: 80%;
+  margin: auto;
+  font-family: "Open Sans",
+    sans-serif;
+  font-size: 20px;
+  text-align: center;
+  line-height: 1.5;
+  letter-spacing: 1.3;
+  background: whitesmoke;
+}
+
+header,
+nav {
+  width: 100%;
+  color: #f2f2f2;
+  border-bottom: 2px solid whitesmoke;
+}
+
 /*links*/
-  a{
-    padding: 0.5rem;
-    text-decoration: none;
-    color: whitesmoke;
-    }
-    a:hover{
-      color: black;
-    }
-/*office image*/
-    .nav-wrapper{
-      box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: auto;
-        background: url("./imgs/office.png");
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        position: relative;
-    }
-    .nav-wrapper::after{
-        color: rgba(85, 85, 85, 0.33);
-         width: 100%;
-         height: 100%;
-         position: absolute;
-         content: '';
-         top: 0;
-         left:0;
-         background: rgba(84, 84, 84, 0.372);
-         z-index: 1;
-    }
+a {
+  padding: 0.5rem;
+  text-decoration: none;
+  color: whitesmoke;
+}
 
-    .img-wrapper{
-      position: relative;
-      z-index: 2;
-    }
+a:hover {
+  color: black;
+}
+
+/*office image*/
+.nav-wrapper {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: auto;
+  background: url("./imgs/office.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.nav-wrapper::after {
+  color: rgba(85, 85, 85, 0.33);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  background: rgba(84, 84, 84, 0.372);
+  z-index: 1;
+}
+
+.img-wrapper {
+  position: relative;
+  z-index: 2;
+}
+
 /*main content img*/
-    .background-image{
-      box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: auto;
-        background: url("./imgs/coding.png");
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        position: relative;
-    }
-    .background-image::after{
-        color: rgba(85, 85, 85, 0.33);
-         width: 100%;
-         height: 100%;
-         position: absolute;
-         content: '';
-         top: 0;
-         left:0;
-         background: rgba(249, 249, 249, 0.372);
-         z-index: 1;
-    }
+.background-image {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: auto;
+  background: url("./imgs/coding.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.background-image::after {
+  color: rgba(85, 85, 85, 0.33);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  background: rgba(249, 249, 249, 0.372);
+  z-index: 1;
+}
+
 /*intro pic*/
-    .intro{
-      width: 300px;
-      height: auto;
-      margin: auto;
-      position: relative;
-      z-index: 2;
-    }
+.intro {
+  width: 300px;
+  height: auto;
+  margin: auto;
+  position: relative;
+  z-index: 2;
+}
+
 /*display grid container*/
-    .project-wrapper{
-      width:100%;
-      position: relative;
-      z-index: 2;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-auto-rows: minmax(400px,auto);
-    }
+.project-wrapper {
+  width: 100%;
+  position: relative;
+  z-index: 2;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: minmax(400px, auto);
+}
+
 /*project boxes*/
-  .box-2,.box-3{
-      color: #f2f2f2;
-      margin: 1rem;
-      padding: 0.5rem;
-      background-color: #000000ac;
-    }
+.box-2,
+.box-3 {
+  color: #f2f2f2;
+  margin: 1rem;
+  padding: 0.5rem;
+  background-color: #000000ac;
+}
 
 /*need to change image size as it breaks screen*/
-    .project-img1,.project-img2{
-      min-width: 200px;
-      height: auto;
-      margin: auto;
-    }
+.project-img1,
+.project-img2 {
+  min-width: 200px;
+  height: auto;
+  margin: auto;
+}
+
 /*all project imgs*/
-    img{
-      display: block;
-      width: 100%;
-      height: auto;
-      object-fit: contain;
-    }
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
 
-    /*title descrip stack links*/
-      .tdsl{
-        color: rgb(255, 135, 79);
-    background: #666666;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    background-clip: text;
-    text-shadow: 0px 2px 2px rgba(255,255,255,0.5);
-      }
+/*title descrip stack links*/
+.tdsl {
+  color: rgb(255, 135, 79);
+  background: #666666;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+  text-shadow: 0px 2px 2px rgba(255, 255, 255, 0.5);
+}
 
 
-    footer{
-      border-top: 2px solid black;
-    }
+footer {
+  border-top: 2px solid black;
+}
 
-    @media (max-width: 920px){
-      .project-wrapper{
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-auto-rows: minmax(400px,auto);
-      }
-    }
+@media (max-width: 920px) {
+  .project-wrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: minmax(400px, auto);
+  }
+}
 
-@media (max-width: 768px){
-  h1,h2{
+@media (max-width: 768px) {
+
+  h1,
+  h2 {
     font-size: 1.5rem;
   }
 }
 
-@media (max-width: 375px){
-a{
-  font-size: 1rem;
-}
-
-  h1,h2{
+@media (max-width: 375px) {
+  a {
     font-size: 1rem;
   }
 
-.intro{
-  display: none;
-}
+  h1,
+  h2 {
+    font-size: 1rem;
+  }
 
-p{
-  font-size: 12px;
-}
+  .intro {
+    display: none;
+  }
+
+  p {
+    font-size: 12px;
+  }
 }
