--- a/contact.css
+++ b/contact.css
@@ -62,9 +62,41 @@ a:hover {
     z-index: 2;
 }
 
-.contact-wrapper{
+.contact-wrapper {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
     width: 100%;
-    height: 400px;
-    background: rgba(84, 84, 84, 0.372);
-    
-}
+    min-height: 700px;
+    background: url("./imgs/coding.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    text-align: left;
+  }
+  
+  .contact-wrapper::after {
+    color: rgba(85, 85, 85, 0.33);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    background: rgba(249, 249, 249, 0.372);
+    z-index: 1;
+  }
+
+  h2{
+      padding-left: 3rem;
+      position: relative;
+      z-index: 2;
+      color: rgb(255, 135, 79);
+background: #666666;
+-webkit-background-clip: text;
+-moz-background-clip: text;
+background-clip: text;
+text-shadow: 0px 2px 2px rgba(255,255,255,0.5);
+      
+  }
