--- a/contact.css
+++ b/contact.css
@@ -73,10 +73,9 @@ a:hover {
     background-size: cover;
     background-position: center;
     position: relative;
-    text-align: left;
-  }
-  
-  .contact-wrapper::after {
+}
+
+.contact-wrapper::after {
     color: rgba(85, 85, 85, 0.33);
     width: 100%;
     height: 100%;
@@ -86,17 +85,55 @@ a:hover {
     left: 0;
     background: rgba(249, 249, 249, 0.372);
     z-index: 1;
-  }
+}
 
-  h2{
-      padding-left: 3rem;
-      position: relative;
-      z-index: 2;
-      color: rgb(255, 135, 79);
-background: #666666;
--webkit-background-clip: text;
--moz-background-clip: text;
-background-clip: text;
-text-shadow: 0px 2px 2px rgba(255,255,255,0.5);
-      
-  }
+.links{
+    padding: 1rem;
+    margin: auto;
+    position: relative;
+    z-index: 2;
+    color: rgb(255, 135, 79);
+    background: #666666;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    text-shadow: 0px 2px 2px rgba(255, 255, 255, 0.5);
+
+}
+
+footer {
+    border-top: 2px solid black;
+}
+
+@media (max-width: 700px){
+    h1,h2{
+        font-size: 1.5rem;
+    }
+    .links{
+        font-size: 1.5rem;
+    }
+    span{
+        font-size: 1rem;
+    }
+}
+
+@media (max-width: 425px){
+    h1,h2{
+        font-size: 1.2rem;
+    }
+    .links{
+        font-size: 1.2rem;
+    }
+    span{
+        font-size: 0.9rem;
+    }
+}
+
+@media (max-width: 375px){
+    h1,h2{
+        font-size: 0.8rem;
+    }
+    .links{
+        font-size: 0.8rem;
+    }
+}
