--- a/main.css
+++ b/main.css
@@ -175,6 +175,10 @@ text-shadow: 0px 2px 2px rgba(255,255,255,0.5);
   border-radius: 50%;
 }
 
+.box-1  p {
+  text-align: left;
+}
+
 
 footer {
     width: 100%;
