--- a/project.css
+++ b/project.css
@@ -39,7 +39,7 @@ a:hover {
   padding: 0;
   width: 100%;
   height: auto;
-  background: url("./imgs/office.png");
+  /* background: url("./imgs/office.png"); */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -70,7 +70,7 @@ a:hover {
   padding: 0;
   width: 100%;
   height: auto;
-  background: url("./imgs/coding.png");
+  /* background: url("./imgs/coding.png"); */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -142,6 +142,8 @@ img {
   background-clip: text;
   text-shadow: 0px 2px 2px rgba(255, 255, 255, 0.5);
 }
+
+
 
 
 footer {
