--- a/test.css
+++ b/test.css
@@ -7,6 +7,7 @@
     margin: auto;
     font-family: "Open Sans",
     sans-serif; 
+    font-size: 20px;
     text-align: center;
     line-height: 1.5;
     letter-spacing: 1.3;
@@ -29,22 +30,18 @@ a:hover{
     z-index: 2;
   }
 
-  .name-and-title{
-    font-size: 8px;
-  }
-
   .name-and-title h2 {
     overflow: hidden; /* Ensures the content is not revealed until the animation */
     border-right: .15em solid orange; /* The typwriter cursor */
     white-space: nowrap; /* Keeps the content on a single line */
-    /* Gives that scrolling effect as the typing happens */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
     letter-spacing: .15em; /* Adjust as needed */
     animation: 
       typing 4s steps(60, end),
       blink-caret .75s step-end infinite;
   }
   .type-box{
-    width: 200px;
+    width: 500px;
     word-wrap: break-word;
     margin: auto;
   }
@@ -120,7 +117,6 @@ a:hover{
 /*main content wrapper aboubt me and projects*/
 
   #main-wrapper{
-    font-size: 12px;
     width:100%;
     position: relative;
     z-index: 2;
@@ -169,8 +165,8 @@ text-shadow: 0px 2px 2px rgba(255,255,255,0.5);
   /*image wrappers*/
   .tech-imgs{
     display: inline-block;
-    width: 75px;
-    height: 75px;
+    width: 150px;
+    height: 150px;
   }
 /*tech images*/
 .img{
@@ -266,6 +262,3 @@ h3{
       height: 75px;
     }
   } */
- 
-
-  
