--- a/main.css
+++ b/main.css
@@ -191,81 +191,86 @@ footer {
   }
   
 /************MEDIA QUERIES******************/
-
-  /* @media (min-width: 1220px){
-    #main-wrapper{
-      display: grid;
-     grid-template-columns: 1fr;
-    }
+@media (min-width: 400px){
+  .name-and-title{
+    font-size: 12px;
   }
-
-  @media (min-width: 768px){
-h1,h2{
-  font-size: 24px;
+  .type-box{
+    width: 300px;
+    
+    margin: auto;
+  }
+  #main-wrapper{
+    font-size: 14px;
+  }
 }
-h3{
-  font-size: 24px;
+
+@media (min-width: 500px){
+  .name-and-title{
+    font-size: 12px;
+  }
+  .type-box{
+    width: 300px;
+    
+    margin: auto;
+  }
+  #main-wrapper{
+    font-size: 1rem;
+  }
 }
-.tech-imgs{
-  width: 120px;
-  height: 120px;
+
+@media (min-width: 650px){
+  .nav-links-wrapper{
+    font-size: 18px;
+  }
+
+  .name-and-title{
+    font-size: 12px;
+  }
+  .type-box{
+    width: 300px;
+    margin: auto;
+  }
+  #main-wrapper{
+    font-size: 20px;
+  }
+  .tech-imgs{
+    display: inline-block;
+    width: 100px;
+    height: 100px;
+  }
+
 }
+
+@media (min-width: 900px){
+  #main-wrapper{
+    font-size: 18px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: minmax(400px,auto);
+  }
+}
+
+@media (min-width: 1024px){
+  .nav-links-wrapper{
+    font-size: 24px;
   }
 
-  @media (min-width: 650px){
-    .type-text{
-      font-size: 16px;
-      width: 300px
-    }
-    .type-box{
-      text-align: center;
-      width: 300px;
-    }
-    .tech-imgs{
-      width: 100px;
-      height: 100px;
-    }
-    .tech-text{
-      font-size: 1.3rem;
-    }
-
+  .name-and-title{
+    font-size: 1rem;
   }
 
-  @media (min-width: 500px){
-    p{
-      font-size: 0.8rem;
-    }
-    .tech-text{
-      font-size: 1rem;
-    }
+  .type-box{
+    width: 400px;
+    margin: auto;
   }
-
-  @media (min-width: 375px){
-    .type-text{
-      font-size: 10px;
-      width: 200px
-    }
-    .type-box{
-      text-align: center;
-      width: 200px;
-    }
+  .tech-imgs{
+    display: inline-block;
+    width: 150px;
+    height: 150px;
   }
+}
 
-  @media (min-width: 320px){
-    .type-text{
-      font-size: 10px;
-      width: 200px
-    }
-    .type-box{
-      text-align: center;
-      width: 200px;
-    }
-
-    .tech-imgs{
-      width: 75px;
-      height: 75px;
-    }
-  } */
  
 
   
