--- a/project.css
+++ b/project.css
@@ -21,8 +21,13 @@ nav {
   border-bottom: 2px solid whitesmoke;
 }
 
+h1,h2{
+  font-size: 1rem;
+}
+
 /*links*/
 a {
+  font-size: 12px;
   padding: 0.5rem;
   text-decoration: none;
   color: whitesmoke;
@@ -91,6 +96,7 @@ a:hover {
 
 /*intro pic*/
 .intro {
+  display: none;
   width: 300px;
   height: auto;
   margin: auto;
@@ -104,13 +110,14 @@ a:hover {
   position: relative;
   z-index: 2;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   grid-auto-rows: minmax(400px, auto);
 }
 
 /*project boxes*/
 .box-2,
 .box-3 {
+  font-size: 12px;
   color: #f2f2f2;
   margin: 1rem;
   padding: 0.5rem;
@@ -150,7 +157,48 @@ footer {
   border-top: 2px solid black;
 }
 
-@media (max-width: 920px) {
+@media (min-width: 375px) {
+  a {
+    font-size: 1rem;
+  }
+
+  h1,
+  h2 {
+    font-size: 1.2rem;
+  }
+  .box-2,
+.box-3 {
+  font-size: 1rem;
+}
+}
+
+@media (min-width: 768px){
+  a {
+    font-size: 1.2rem;
+  }
+
+  h1,
+  h2 {
+    font-size: 1.4rem;
+  }
+  .box-2,
+.box-3 {
+  font-size: 1.2rem;
+}
+}
+
+@media (min-width: 900px){
+  .project-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: minmax(400px, auto);
+  }
+}
+
+
+  
+
+/* @media (max-width: 920px) {
   .project-wrapper {
     display: grid;
     grid-template-columns: 1fr;
@@ -183,4 +231,4 @@ footer {
   p {
     font-size: 12px;
   }
-}
+} */
