--- a/contact.css
+++ b/contact.css
@@ -7,7 +7,7 @@ body {
     margin: auto;
     font-family: "Open Sans",
         sans-serif;
-    font-size: 20px;
+    font-size: 12px;
     text-align: center;
     line-height: 1.5;
     letter-spacing: 1.3;
@@ -110,7 +110,23 @@ footer {
     border-top: 2px solid black;
 }
 
-@media (max-width: 700px){
+
+@media (min-width: 320px){
+
+}
+
+@media (min-width: 425px){
+    body {
+        font-size: 16px;
+    }
+}
+@media (min-width: 1024px){
+    body {
+        font-size: 24px;
+    }
+}
+
+/* @media (max-width: 700px){
     h1,h2{
         font-size: 1.5rem;
     }
@@ -141,4 +157,4 @@ footer {
     .links{
         font-size: 0.8rem;
     }
-}
+} */
