--- a/contact.css
+++ b/contact.css
@@ -38,7 +38,7 @@ a:hover {
     padding: 0;
     width: 100%;
     height: auto;
-    background: url("./imgs/office.png");
+    /* background: url("./imgs/office.png"); */
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
