--- a/contact.css
+++ b/contact.css
@@ -97,7 +97,7 @@ a:hover {
     -webkit-background-clip: text;
     -moz-background-clip: text;
     background-clip: text;
-    text-shadow: 0px 2px 2px rgba(255, 255, 255, 0.5);
+    /* text-shadow: 0px 2px 2px rgba(255, 255, 255, 0.5); */
 
 }
 
