--- a/main.css
+++ b/main.css
@@ -142,7 +142,7 @@ background: #666666;
 -webkit-background-clip: text;
 -moz-background-clip: text;
 background-clip: text;
-text-shadow: 0px 2px 2px rgba(255,255,255,0.5);
+/* text-shadow: 0px 2px 2px rgba(255,255,255,0.5); */
   }
   /*all images*/
   img{
