--- a/project.css
+++ b/project.css
@@ -146,6 +146,7 @@ img {
 
 /*title descrip stack links*/
 .tdsl {
+  margin: 0;
   color: rgb(255, 135, 79);
   background: #666666;
   -webkit-background-clip: text;
