--- a/main.css
+++ b/main.css
@@ -130,8 +130,9 @@ a:hover{
   }
 /*sections about me and projects*/
   .box-1,.box-2,.box-3,.box-4{
+    font-size: 16px;
     color: #f2f2f2;
-    margin: 1rem;
+    margin: 10px auto 10px auto;
     padding: 0.5rem;
     background-color: #000000ac;
   }
@@ -248,6 +249,11 @@ footer {
 }
 
 @media (min-width: 900px){
+  .box-1,.box-2,.box-3,.box-4{
+  
+    margin: 1rem;
+   
+  }
   #main-wrapper{
     font-size: 18px;
     display: grid;
