--- a/contact.css
+++ b/contact.css
@@ -46,14 +46,14 @@ a:hover {
 }
 
 .nav-wrapper::after {
-    color: rgba(85, 85, 85, 0.33);
+    color: #000000ac;
     width: 100%;
     height: 100%;
     position: absolute;
     content: '';
     top: 0;
     left: 0;
-    background: rgba(84, 84, 84, 0.372);
+    background: #000000ac;
     z-index: 1;
 }
 
