--- a/project.css
+++ b/project.css
@@ -52,14 +52,14 @@ a:hover {
 }
 
 .nav-wrapper::after {
-  color: rgba(85, 85, 85, 0.33);
+  color: #000000ac;
   width: 100%;
   height: 100%;
   position: absolute;
   content: '';
   top: 0;
   left: 0;
-  background: rgba(84, 84, 84, 0.372);
+  background: #000000ac;
   z-index: 1;
 }
 
@@ -119,7 +119,7 @@ a:hover {
 .box-3 {
   font-size: 12px;
   color: #f2f2f2;
-  margin: 1rem;
+  margin: 10px auto 10px auto;
   padding: 0.5rem;
   background-color: #000000ac;
 }
@@ -193,6 +193,11 @@ footer {
 }
 
 @media (min-width: 900px){
+  .box-2,
+.box-3 {
+
+  margin: 1rem;
+}
   .project-wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr;
