--- a/contact.css
+++ b/contact.css
@@ -11,7 +11,7 @@ body {
     text-align: center;
     line-height: 1.5;
     letter-spacing: 1.3;
-    background: whitesmoke;
+    background: black;
 }
 
 header,
@@ -76,14 +76,14 @@ a:hover {
 }
 
 .contact-wrapper::after {
-    color: rgba(85, 85, 85, 0.33);
+    color: #000000ac;
     width: 100%;
     height: 100%;
     position: absolute;
     content: '';
     top: 0;
     left: 0;
-    background: rgba(249, 249, 249, 0.372);
+    background: #000000ac;
     z-index: 1;
 }
 
@@ -102,11 +102,12 @@ a:hover {
 }
 
 h2 > a {
-    color: grey;
+    color:white;
 }
 
 
 footer {
+    color: white;
     border-top: 2px solid black;
 }
 
