--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@
     text-align: center;
     line-height: 1.5;
     letter-spacing: 1.3;
-    background: whitesmoke;
+    background: black;
   }
 /*all links*/
 a{
@@ -191,6 +191,7 @@ background-clip: text;
 
 
 footer {
+  color: white;
     width: 100%;
     padding: 1rem;
    border-top: 2px solid black;
