--- a/project.css
+++ b/project.css
@@ -11,7 +11,7 @@ body {
   text-align: center;
   line-height: 1.5;
   letter-spacing: 1.3;
-  background: whitesmoke;
+  background: black;
 }
 
 header,
@@ -159,6 +159,7 @@ img {
 
 
 footer {
+  color: white;
   border-top: 2px solid black;
 }
 
