--- a/project.css
+++ b/project.css
@@ -83,14 +83,14 @@ a:hover {
 }
 
 .background-image::after {
-  color: rgba(85, 85, 85, 0.33);
+  color: #000000ac;
   width: 100%;
   height: 100%;
   position: absolute;
   content: '';
   top: 0;
   left: 0;
-  background: rgba(249, 249, 249, 0.372);
+  background: #000000ac;
   z-index: 1;
 }
 
