changed background colors to black

--- a/contact.css
+++ b/contact.css
@@ -93,7 +93,7 @@ a:hover {
     position: relative;
     z-index: 2;
     color: grey;
-    background: #666666;
+    background: #000000ac;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     background-clip: text;
