--- a/main.css
+++ b/main.css
@@ -182,7 +182,7 @@ background-clip: text;
 .img{
   width: 100%;
   height: auto;
-  border-radius: 50%;
+  /* border-radius: 50%; */
 }
 
 .box-1  p {
